APTS-749-b : Fix for calendar overlapping years

--- a/projects/ngx-formentry/src/components/date-time-picker/date-picker/date-picker.component.css
+++ b/projects/ngx-formentry/src/components/date-time-picker/date-picker/date-picker.component.css
@@ -9,7 +9,7 @@
 
 .picker-box {
   font-family: 'Open Sans';
-  width: 100%;
+  min-width: 400px !important;
   padding: 0.625rem 1rem;
   user-select: none; }
 
